iphone4 landing page, fixed body overflow bug

--- a/assets/css/marco.css
+++ b/assets/css/marco.css
@@ -1,19 +1,18 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 768px) {
     .logo {
         margin-left: 9px !important;
-    }
-    .header ul{
-    	/*font-size: 12pt;*/
     }
 
     .header ul li:nth-child(1){
     	padding-right: 10px;
     	padding-top: 50px;
+    	font-size: 12pt;
     }
 
     .header ul {
     	position: absolute;
     	top: 0;
+    	margin: 0;
     }
 
     .header ul li:nth-child(2), li:nth-child(3), li:nth-child(4), li:nth-child(5){
@@ -38,23 +37,20 @@
     	right: -165px;
     }
 
-    .header ul li a img {
-    	/*height: 35px;*/
-    }
-
     .top-page .landing-container .slogan{
     	font-size: 22pt !important;
+    }
+
+    .top-page .landing-container {
+    	margin-top: 125px !important;
     }
 
     .top-page .landing-container a{
     	font-size: 18pt !important;
     }
+
     .top-page {
     	overflow: hidden;
-    }
-
-    .top-page .landing-container .why-not {
-    	margin-top: -50px;
     }
 }
 
@@ -64,3 +60,9 @@
     } 
  }
 */
+
+@media only screen and (max-width: 1050px) {
+	body{
+		overflow: hidden;
+	}
+}
